--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
       <footer>
         This project was coded by
-        <a href="https://github.com/nyankwoga" target="_blank">
-          Valentine Kerubo</a
+        <a href="https://github.com/Biden254" target="_blank">
+          Loren Deklerk</a
         >, is
-        <a href="https://github.com/nyankwoga/WEATHER-SITE" target="_blank"
+        <a href="https://github.com/Biden254/Weather-site" target="_blank"
           >open-sourced on GitHub</a
         >
         and
